--- a/EmptyBlazorWASMApp/Dockerfile
+++ b/EmptyBlazorWASMApp/Dockerfile
@@ -6,5 +6,5 @@ RUN dotnet publish -c Release -o output
 FROM nginx:alpine
 WORKDIR /var/www/web
 COPY --from=build-env /app/output/wwwroot .
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY EmptyBlazorWASMApp/nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
